# spectrum-systems-core

./: .gitignore  CLAUDE.md  DEBUGGING.md  README.md  package.json  pyproject.toml
.claude/: AGENTS.md  artifact_manifest_requirement.md  commit_message_hygiene.md  integration_test_requirement.md  phase-progress.md  pr_failure_protocol.md  rollback_contracts.md  settings.json
config/: corpus_manifest.yaml  phase_y.yaml
data/: cost_constants.json  transcript_quality_config.json
docs/: codex-baseline-howto.md
scripts/: _artifact_kind_check.py  _artifact_validator.py  _env_validate.py  _few_shot_preflight.py  _gitignore_audit.py  _integration_test_check.py  _match_minutes_transcripts.py  _migrate_artifacts_to_data_lake_repo.py  _phase_z_lake.py  _pr_triage.py  _pre_pr_rollback_check.py  _validate_runbook.py  _verify_ingest_opus_baseline.py  analyze_chunk_failure.sh  annotate_rubric.py  autonomous_llm_fix.py  build_ab_comparison.py  check_auto_pr_eligibility.py  check_f1_regression.py  check_harness_code_pr_eligibility.py  cleanup_data_lake.py  cleanup_duplicate_pairs.py  cli_few_shot.py  cli_glossary.py  compare_haiku_vs_human_minutes.py  compare_opus_haiku.py  confirm_pairs.py  convert_docx_minutes.py  correction_miner.py  create_cross_meeting_synthesis.py  create_human_gt_pairs.py  create_opus_reference_baselines.py  debug_within_source.py  debug_workflow_failure.py  finalize_rollback_entry.py  find_failing_chunk_range.sh  generate_gt_pairs.py  ingest_codex_baseline.py  ingest_corpus.py  ingest_human_minutes.py  (+36 more)
tests/: llm_stub.py  test_ab_comparison.py  (+77 more)
(+1080 files in other folders)
