[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrum-systems-core"
version = "0.1.0"
description = "Governed artifact engine implementing the Produce -> Evaluate -> Decide -> Promote loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Spectrum Systems Core" }]
dependencies = [
    "jsonschema>=4.0",
    "PyYAML>=6.0",
    "pdfminer.six>=20231228",
    "python-docx>=1.1",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
spectrum-core = "spectrum_systems_core.data_lake.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
